--- a/app/src/main/res/layout/fragment_class_group.xml
+++ b/app/src/main/res/layout/fragment_class_group.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f5f5f5"
-    tools:context=".screens.Teachers.ClassGroupFragment">
+    tools:context=".screens.teachers.ClassGroupFragment">
 
     <ScrollView
         android:layout_marginTop="0dp"
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <TextView
@@ -54,7 +54,8 @@
             android:src="@drawable/settings_icon"
             app:layout_constraintBottom_toBottomOf="@+id/course_name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/course_name" />
+            app:layout_constraintTop_toTopOf="@+id/course_name"
+            android:contentDescription="@string/setting_icon" />
 
         <SearchView
             android:id="@+id/searchView"
@@ -72,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipChildren="false"
-            android:clipToOutline="false"
+            android:paddingStart="0dp"
             android:paddingEnd="20dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
@@ -102,7 +103,7 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginStart="16dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="Students"
+                    android:text="@string/students"
                     android:textColor="@color/darkMainColor"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +115,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
-                    android:text="0 Students"
+                    android:text="@string/_0_students"
                     android:textColor="#1E4FFF"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/textView9"
