--- a/app/src/main/res/layout/fragment_student_assignment.xml
+++ b/app/src/main/res/layout/fragment_student_assignment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".screens.Student.StudentAssignment">
+    tools:context=".screens.student.StudentAssignment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
