--- a/app/src/main/res/layout/fragment_teachers.xml
+++ b/app/src/main/res/layout/fragment_teachers.xml
@@ -5,7 +5,7 @@
     android:background="#f2f2f2"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".screens.Teachers.TeachersFragment">
+    tools:context=".screens.teachers.TeachersFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
