--- a/app/src/main/res/menu/mini_setting_menu.xml
+++ b/app/src/main/res/menu/mini_setting_menu.xml
@@ -5,14 +5,14 @@
 
     <item
         android:id="@+id/switch_to_teacher"
-        android:title="Switch to Teacher" />
+        android:title="@string/switch_to_teacher" />
 
     <item
         android:id="@+id/join_class"
-        android:title="Join a new Class"/>
+        android:title="@string/join_a_new_class"/>
 
     <item
         android:id="@+id/logout"
-        android:title="Logout" />
+        android:title="@string/logout" />
 
 </menu>
