--- a/app/src/main/res/menu/mini_setting_teacher_menu.xml
+++ b/app/src/main/res/menu/mini_setting_teacher_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/logout"
-        android:title="Logout" />
-    <item
         android:id="@+id/switch_to_teacher"
-        android:title="Switch to Student" />
+        android:title="@string/switch_to_student" />
+    <item
+        android:id="@+id/logout"
+        android:title="@string/logout" />
+
 </menu>
